--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Unit 5, Part 2 - HTML/CSS Practice</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+
+  <link rel="stylesheet" href="stylesheet.css" />
+</head>
+
+
+<body>
+  <header>
     <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+    <h2 class = "test1">Ani's Record Shop</h2>
+
+  </header>
+  <main>
     <p>Look at my cool music page.</p>
-    <!-- Create an unordered list with any questions you have -->
-  </body>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+
+    <br></br>
+    <br></br>
+    <br></br>
+  </main>
+  <!-- Create an unordered list with any questions you have -->
+</body>
+
 </html>
